--- a/css/style.scss
+++ b/css/style.scss
@@ -2,36 +2,25 @@
 $mc:#e73827;
 $bc: #e6e6eb;
 $borc: #e6e6eb;
-%list_fomat {
-    border-radius: 4vw;
-    box-shadow: 0.5vw 0.5vw 4vw 0.5vw rgba(59, 59, 59, 0.15);
-    background: #fff;
-    padding: 6vw 0;
-}
-%list_h2 {
-    font-size: 7vw;
-    font-weight: 900;
-    padding: 0 4vw;
-}
+
 .header {
     position: fixed;
     left: 0;
     top: 0;
-        z-index: 100;
+    z-index: 100;
     width: 100%;
-    background: #fff;
-    
+    background: #fff;    
         .morebox {
-            padding: 2vw;
+            padding: 10px;
                  a {
                display: inline-block;
-               width: 50%;             
+               width: 20%;             
              box-sizing: border-box;
            }
            .logo {
             display: block;
             float: left;
-            width: 24vw;
+            width: 10vw;
             
             img {
                 width: 100%;
@@ -39,21 +28,20 @@ $borc: #e6e6eb;
        }
        .moremap {
         display: block;
-       width:25%;
+        width:25%;
        .desc{
            font-size: 10px;
            text-align: center;
            img{
-            width:50%;
-            height: 50%;
+            widows: 50px;
+            height: 50px;
                 }  
-       }
-       
-    }
+           }       
+      }
     }
     .location {
         width: 100%;
-        padding: 2vw;
+        padding: 20px;
         position: relative;
         background: linear-gradient(30deg, #000000,#e74c3c);
         span {
@@ -82,7 +70,7 @@ $borc: #e6e6eb;
     .searchbox {
         display:none;
         width: 100%;
-        padding: 3vw 5vw;
+        padding: 2vw;
         background: #fff;
         &.active{
             display:block;
@@ -127,24 +115,28 @@ $borc: #e6e6eb;
     }
 }
 
-
 .background {
     background: $bc;
     padding-top: 20vh;
   
     .page {
-        margin: 6vw 4vw;
+        margin: 3vw 2vw;
         .today-list {
-            @extend %list_fomat;
+            border-radius: 4vw;
+            box-shadow: 0.5vw 0.5vw 4vw 0.5vw rgba(59, 59, 59, 0.15);
+            background: #fff;
+            padding: 2vw;
             
             h2 {
-                @extend %list_h2;
+                font-size: 30px;
+                font-weight: 900;
+                padding: 0 4vw;
             }
             .data-wrap {
                 background: #fff;
-                padding: 4vw;
+                padding: 2vw;
                 width: 100%;
-                height: 73vw;
+                height: 30vw;
                 position: relative;
                 overflow:hidden;
                 &.active{
@@ -162,41 +154,40 @@ $borc: #e6e6eb;
                    transform:scale(0.98);
                    will-change:transform;
                    user-select:none;
-                   cursor:move;
-                    margin-left: 5vw;
-                   
+                   cursor:move;                                      
                     .item {
                         display:flex;
                         flex-direction: column;
-                        width: 53vw;
-                        margin-right: 10vw;
+                        width: 20vw;
+                        margin-right: 7vw;
+                        text-align:center;
                         .thumb {
-                            width: 100%;
-                            height: 50vw;
+                            width: 200px;
+                            height: 20vw;
                             img {
-                                width: 300px;
+                                width: 100%;
                                 height: 100%;
                                 border-radius: 3vw;
                             }
                         }
                         .summary {
-                            margin-left:5px;
+                             margin-left:5px;
                             > h3 {
                                 white-space: nowrap;
-                                font-size: 4.7vw;
+                                font-size: 14px;
                                 margin-top: 2vw;
                                 font-weight: 500;
-                                width: 70%;
+                                width: 100%;
                                 text-transform:uppercase;
                             }
                            > small {
                                 opacity: 0.7;
-                                font-size: 3.1vw;
+                                font-size: 13px;
                                 display: block;
                                 margin-top: 1.5vw;
                                 color: #898989;
-                                width: 55%;
-                                height: 30px;
+                                width: 100%;
+                                height: 15px;
                                 overflow: hidden;
                                 text-overflow: ellipsis;
                                 white-space: nowrap;
@@ -209,14 +200,10 @@ $borc: #e6e6eb;
     }
     .nearbox {
         background: #fff;
-        margin-top: 50px;
-        
-       
+        margin-top: 40px;     
         .mapbox {
-            border-top: 1px solid $borc;
-           
+            border-top: 1px solid $borc;           
             .distance {
-                
                 width:100%;
                 padding: 10px;
                 margin-bottom: 5px;
@@ -225,15 +212,13 @@ $borc: #e6e6eb;
                 .nearby {
                     width:100%;
                     padding: 0 15px;
-                    
-                    h3 {
+                                        h3 {
                         font-size: 18px;
                         margin-bottom: 5px;
                     }
                     p {
                         color: #9999a0;
-                                     }
-                }
+                                     }             }
 
                 .level {
                     flex-wrap:wrap;
@@ -245,9 +230,7 @@ $borc: #e6e6eb;
                         flex:1;
                         p{
                             width:100%;
-                         
-                       
-                        }
+                         }
                         }
                 }
                
@@ -265,14 +248,13 @@ $borc: #e6e6eb;
            height:20vh;
          
             .items {
-                border-radius: 2px;
+           border-radius: 2px;
             padding: 10px 0;
             font-size: 14px;
             position: relative;
            display:flex;
             z-index:100;
-            width:100%;
-           
+            width:100%;           
             transition:transform 3s ease-in-out;
            white-space:nowrap;
            transition:all .2s;
@@ -280,8 +262,7 @@ $borc: #e6e6eb;
            will-change:transform;
            user-select:none;
            cursor:move;
-            margin-left: 20px;
-                
+            margin-left: 20px;                
               
                 &.active{
                     cursor:grabbing;
@@ -377,3 +358,223 @@ $borc: #e6e6eb;
     
 }
   
+@media (max-width: 768px) {
+
+    .header {
+              
+            .morebox {               
+               .logo {
+                width: 16vw;
+             }                   
+        }
+   
+        .location {            
+            padding: 2vw;        
+        }
+        .searchbox {
+                       padding: 3vw 5vw;
+                }
+    }
+    .background {
+                 
+        .page {
+            margin: 6vw 4vw;
+            .today-list {                padding: 3vw;
+                h2 {
+                    font-size: 5vw;
+                                }
+                .data-wrap {
+                      padding: 4vw;
+                      height: 60vw;               
+                    .items {
+                        margin-left: 3vw;
+                        .item {
+                           width: 43vw;
+                            margin-right: 10vw;
+                            .thumb {
+                                width: 100%;
+                                height: 40vw;         
+                            }
+                            .summary { 
+                                 > h3 { font-size: 4vw;
+                                  }
+                               > small {
+                                   font-size: 2.5vw;
+                                   height: 25px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .nearbox {
+            background: #fff;
+            margin-top: 50px;
+            
+           
+            .mapbox {
+                border-top: 1px solid $borc;
+               
+                .distance {
+                    
+                    width:100%;
+                    padding: 10px;
+                    margin-bottom: 5px;
+                    background:#fff;
+                    flex-wrap:wrap;
+                    .nearby {
+                        width:100%;
+                        padding: 0 15px;
+                        
+                        h3 {
+                            font-size: 18px;
+                            margin-bottom: 5px;
+                        }
+                        p {
+                            color: #9999a0;
+                                         }
+                    }
+    
+                    .level {
+                        flex-wrap:wrap;
+                      > a{
+                           cursor:pointer;
+                            text-align:center;
+                            padding:3px 25px;
+                            width:100%;
+                            flex:1;
+                            p{
+                                width:100%;
+                             
+                           
+                            }
+                            }
+                    }
+                   
+                }
+                .map {
+                    height: auto;
+                  
+                   }
+                }
+               
+           
+            .listbox {
+                overflow:hidden;
+                width:100%;
+               height:20vh;
+             
+                .items {
+                    border-radius: 2px;
+                padding: 10px 0;
+                font-size: 14px;
+                position: relative;
+               display:flex;
+                z-index:100;
+                width:100%;
+               
+                transition:transform 3s ease-in-out;
+               white-space:nowrap;
+               transition:all .2s;
+               transform:scale(0.98);
+               will-change:transform;
+               user-select:none;
+               cursor:move;
+                margin-left: 20px;
+                    
+                  
+                    &.active{
+                        cursor:grabbing;
+                        transform:scale(1);
+                        background:rgba(255,255,255,0.3);
+                    }
+                   
+                    .item {
+                      
+                        background:#fff;
+                        margin-right: 20px;
+                        padding: 3px 5px;
+                        border: 1px solid $borc;
+                        display:flex;
+                        flex-direction: column;
+                      .con{
+                       width:330px;
+                        .leftsec {
+                            display: inline-block;
+                            flex:2;
+                            font-size: 0;
+                           
+                            .thumb {
+                                width:100%; height:100%;
+                               > a{
+                                   width:100%; height:100%;
+                                }
+                                img {
+                                    width:100px; height:100px;
+                                  
+                                    border-radius: 3vw;
+                                }
+                              }
+                            }
+                        .rightsec {
+                            flex:3;
+                            height:110px;
+                            display: inline-block;
+                            vertical-align: top;
+                            box-sizing: border-box;
+                           margin-left:3px;
+                            font-size: 0;
+                             > div{
+                                margin-bottom: 6px;
+                                > h4 {
+                                    font-size: 16px;
+                                    text-transform:uppercase;
+                                   
+                                }
+                                #idx{
+                                    text-align:center;
+                                    vertical-align: center;
+                                    width:25px; height:25px;
+                                    border-radius:100%;
+                                    border: 2px solid #4aa0ec;
+                                }
+                                > span {
+                                   display:none;
+                                }
+                            }
+                           
+                           > h6 {
+                           
+                                color: #9999a0;
+                                margin-bottom: 10px;
+                            }
+                            
+                            .address {
+                                font-size: 13px;
+                                color: #9999a0;
+                                white-space:pre-wrap;
+                            }
+                        }
+                     
+                    }
+                  }
+                }
+             }
+             .mapInfo{
+                > p{
+                    margin-top:3px;
+                    color: #9999a0;
+                    font-size:10px;
+                    a{
+                        font-size:10px;
+                        color: #9999a0;
+                    }
+             }
+            }
+        
+        }
+    
+        
+    }
+}
