--- a/css/style.css
+++ b/css/style.css
@@ -262,8 +262,8 @@
 }
 
 .background .nearbox .mapbox .distance .nearby h3 {
-  font-size: 18px;
-  margin-bottom: 5px;
+  font-size: 28px;
+  margin: 15px 0;
 }
 
 .background .nearbox .mapbox .distance .nearby p {
