--- a/css/style.scss
+++ b/css/style.scss
@@ -213,8 +213,8 @@ $borc: #e6e6eb;
                     width:100%;
                     padding: 0 15px;
                     h3 {
-                        font-size: 18px;
-                        margin-bottom: 5px;
+                        font-size: 28px;
+                        margin: 15px 0;
                     }
                     p {
                         color: #9999a0;
