--- a/css/map.scss
+++ b/css/map.scss
@@ -17,7 +17,7 @@ $borc: #e6e6eb;
 .background {
     background: $bc;
     position: relative;
-    width:100%; height:100vh;
+    width:100%; height:auto;
     .searchbox {
         .back {
             position: absolute;
@@ -30,13 +30,12 @@ $borc: #e6e6eb;
             background: url(../img/ic_back.png) no-repeat;
             background-size: 100% 100%;
         }
-
         position: fixed;
         z-index: 100;
         top: 0;
         right: 0;
         width: 100%;
-        padding: 3vw 5vw;
+        padding: 2vw 5vw;
         background: #fff;
         .inputarea {
             position: relative;
@@ -80,12 +79,10 @@ $borc: #e6e6eb;
   
     .nearbox {
         background: #fff;
-        margin-top: 50px;
-        
-       
         .mapbox {
-            border-top: 1px solid $borc;
-           
+            border-top: 1px solid $borc;   
+            position:relative;
+            top:0; left:0;        
             .distance {
                 position:fixed;
                 left:0; top:80px;
@@ -97,15 +94,17 @@ $borc: #e6e6eb;
                 flex-wrap:wrap;
                 .nearby {
                     width:100%;
-                    padding: 0 15px;
-                    
+                    padding-top: 15px;   
                     h3 {
                         font-size: 18px;
                         margin-bottom: 5px;
+                        display:inline-block;   
                     }
                     p {
+                       margin-left:5px;
+                        display:inline-block;   
                         color: #9999a0;
-                                     }
+                      }
                 }
 
                 .level {
@@ -118,31 +117,40 @@ $borc: #e6e6eb;
                         flex:1;
                         p{
                             width:100%;
-                         
-                       
-                        }
-                        }
+                         }
+                   }
                 }
                
             }
            
             .map {
                 height: auto;
-               margin-top:120px;
-               > p{
-                margin-top:3px;
-                color: #9999a0;
-                a{
-                    color: #9999a0;
-                }
-               }
+               margin-top:19vh;             
             }
+            .mapInfo{
+                text-align:center;
+                position:absolute;
+                bottom:0; right:5px;
+                z-index:10000;
+                background:rgba(255,255,255,0.3);
+                font-weight:bold;
+               > p{
+                   display:inline-block;
+                   margin-top:2px;
+                   color: #000;
+                   font-size:10px;
+                   a{
+                       font-size:10px;
+                       color: #000;
+                   }
+                }
+             }          
         }
     }
 }
 .slider {
     position: relative;
-    bottom:85px;
+    bottom:200px;
     left:0px;
     z-index: 100;
     width: 100%;
@@ -150,19 +158,14 @@ $borc: #e6e6eb;
     overflow:hidden;
 
     .listbox {
-       
-      
-        .items {
-           
+        .items {           
             border-radius: 2px;
             padding: 10px 0;
             font-size: 14px;
             position: relative;
            display:flex;
             z-index:100;
-            width:100%;
-            height:200px;
-            transition:transform 3s ease-in-out;
+            width:100%;            transition:transform 3s ease-in-out;
            white-space:nowrap;
            transition:all .2s;
            transform:scale(0.98);
@@ -175,14 +178,12 @@ $borc: #e6e6eb;
                 cursor:grabbing;
                 transform:scale(1);
                 background:rgba(255,255,255,0.3);
-            }
-           
-           .item {
-              
+            }           
+           .item {              
                 border: 1px solid rgba(34, 34, 40, 0.15);
                 background:#fff;
                 margin-right: 20px;
-                padding: 16px 15px;
+                padding: 10px;
                 border: 1px solid $borc;
                 width: 430px; 
                 display:flex;
@@ -202,7 +203,6 @@ $borc: #e6e6eb;
                         }
                         img {
                             width:100px; height:100px;
-                          
                             border-radius: 3vw;
                         }
                       }
@@ -219,10 +219,8 @@ $borc: #e6e6eb;
                         margin-bottom: 6px;
                         > h4 {
                             font-size: 16px;
-                           
-                            text-transform:uppercase;
-                           
-                        }
+                            text-transform:uppercase; 
+                              }
                         #idx{
                             text-align:center;
                             vertical-align: center;
@@ -235,22 +233,18 @@ $borc: #e6e6eb;
                         }
                     }
                    
-                   > h6 {
-                   
+                   > h6 {                   
                         color: #9999a0;
                         margin-bottom: 10px;
                     }
-                    
                     .address {
                         font-size: 13px;
                         color: #9999a0;
                         white-space:pre-wrap;
                     }
                 }
-             
             }
          
-           
             .appraisal {
                 margin:10px auto 0;
                 padding-top:10px;
