--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@
 }
 
 .background .page .today-list .data-wrap .items .item .thumb {
-  width: 200px;
+  width: 20vw;
   height: 20vw;
 }
 
@@ -423,8 +423,13 @@
   white-space: pre-wrap;
 }
 
+.background .nearbox .mapInfo {
+  text-align: center;
+}
+
 .background .nearbox .mapInfo > p {
-  margin-top: 3px;
+  display: inline-block;
+  margin-top: 2px;
   color: #9999a0;
   font-size: 10px;
 }
