--- a/css/style.scss
+++ b/css/style.scss
@@ -37,7 +37,7 @@ $borc: #e6e6eb;
             height: 50px;
                 }  
            }       
-      }
+        }
     }
     .location {
         width: 100%;
@@ -49,8 +49,7 @@ $borc: #e6e6eb;
             display: inline-block;
             color: #fff;
             font-size: 17px;
-        }
-    
+        }    
         button {
             margin-right: 15px;
             border-radius: 5px;
@@ -60,8 +59,7 @@ $borc: #e6e6eb;
             padding: 4px 6px 2px;
             font-size: 17px;
             width: 102px;
-            height: 44px;
-    
+            height: 44px;    
             img {
                 width: 4vw;
             }
@@ -117,16 +115,14 @@ $borc: #e6e6eb;
 
 .background {
     background: $bc;
-    padding-top: 20vh;
-  
+    padding-top: 20vh;  
     .page {
         margin: 3vw 2vw;
         .today-list {
             border-radius: 4vw;
             box-shadow: 0.5vw 0.5vw 4vw 0.5vw rgba(59, 59, 59, 0.15);
             background: #fff;
-            padding: 2vw;
-            
+            padding: 2vw;            
             h2 {
                 font-size: 30px;
                 font-weight: 900;
@@ -154,8 +150,8 @@ $borc: #e6e6eb;
                    transform:scale(0.98);
                    will-change:transform;
                    user-select:none;
-                   cursor:move;                                      
-                    .item {
+                   cursor:move; 
+                       .item {
                         display:flex;
                         flex-direction: column;
                         width: 20vw;
@@ -218,8 +214,8 @@ $borc: #e6e6eb;
                     }
                     p {
                         color: #9999a0;
-                                     }             }
-
+                                     }            
+                }
                 .level {
                     flex-wrap:wrap;
                   > a{
@@ -231,44 +227,40 @@ $borc: #e6e6eb;
                         p{
                             width:100%;
                          }
-                        }
+                    }
                 }
                
             }
             .map {
                 height: auto;                      
                }
-            }
-           
-       
+            }  
         .listbox {
             overflow:hidden;
             width:100%;
-           height:20vh;
+            height:20vh;
          
             .items {
-           border-radius: 2px;
-            padding: 10px 0;
-            font-size: 14px;
-            position: relative;
-           display:flex;
-            z-index:100;
-            width:100%;           
-            transition:transform 3s ease-in-out;
-           white-space:nowrap;
-           transition:all .2s;
-           transform:scale(0.98);
-           will-change:transform;
-           user-select:none;
-           cursor:move;
-            margin-left: 20px;                
-              
-                &.active{
+                border-radius: 2px;
+                padding: 10px 0;
+                font-size: 14px;
+                position: relative;
+                display:flex;
+                z-index:100;
+                width:100%;           
+                transition:transform 3s ease-in-out;
+                white-space:nowrap;
+                transition:all .2s;
+                transform:scale(0.98);
+                will-change:transform;
+                user-select:none;
+                cursor:move;
+                margin-left: 20px; 
+                  &.active{
                     cursor:grabbing;
                     transform:scale(1);
                     background:rgba(255,255,255,0.3);
-                }
-               
+                }               
                 .item {
                     background:#fff;
                     margin-right: 20px;
@@ -282,8 +274,7 @@ $borc: #e6e6eb;
                         display: inline-block;
                         flex:2;
                         font-size: 0;
-                       
-                        .thumb {
+                             .thumb {
                             width:100%; height:100%;
                            > a{
                                width:100%; height:100%;
@@ -301,15 +292,13 @@ $borc: #e6e6eb;
                         display: inline-block;
                         vertical-align: top;
                         box-sizing: border-box;
-                       margin-left:3px;
+                        margin-left:3px;
                         font-size: 0;
                          > div{
                             margin-bottom: 6px;
                             > h4 {
                                 font-size: 16px;
-                                text-transform:uppercase;
-                               
-                            }
+                                text-transform:uppercase;   }
                             #idx{
                                 text-align:center;
                                 vertical-align: center;
@@ -320,14 +309,11 @@ $borc: #e6e6eb;
                             > span {
                                display:none;
                             }
-                        }
-                       
-                       > h6 {
-                       
+                        }                       
+                       > h6 {                       
                             color: #9999a0;
                             margin-bottom: 10px;
-                        }
-                        
+                        }                        
                         .address {
                             font-size: 13px;
                             color: #9999a0;
@@ -356,15 +342,12 @@ $borc: #e6e6eb;
 }
   
 @media (max-width: 768px) {
-
     .header {
-              
-            .morebox {               
+         .morebox {               
                .logo {
                 width: 16vw;
              }                   
-        }
-   
+        }   
         .location {            
             padding: 2vw;        
         }
@@ -372,11 +355,11 @@ $borc: #e6e6eb;
                        padding: 3vw 5vw;
                 }
     }
-    .background {
-                 
+    .background {                 
         .page {
             margin: 6vw 4vw;
-            .today-list {                padding: 3vw;
+            .today-list { 
+                    padding: 3vw;
                 h2 {
                     font-size: 5vw;
                                 }
@@ -407,14 +390,10 @@ $borc: #e6e6eb;
         }
         .nearbox {
             background: #fff;
-            margin-top: 50px;
-            
-           
+            margin-top: 50px; 
             .mapbox {
                 border-top: 1px solid $borc;
-               
-                .distance {
-                    
+        .distance {                    
                     width:100%;
                     padding: 10px;
                     margin-bottom: 5px;
@@ -422,8 +401,7 @@ $borc: #e6e6eb;
                     flex-wrap:wrap;
                     .nearby {
                         width:100%;
-                        padding: 0 15px;
-                        
+                        padding: 0 15px; 
                         h3 {
                             font-size: 18px;
                             margin-bottom: 5px;
@@ -431,8 +409,7 @@ $borc: #e6e6eb;
                         p {
                             color: #9999a0;
                                          }
-                    }
-    
+                    }    
                     .level {
                         flex-wrap:wrap;
                       > a{
@@ -443,10 +420,8 @@ $borc: #e6e6eb;
                             flex:1;
                             p{
                                 width:100%;
-                             
-                           
-                            }
-                            }
+                             }
+                         }
                     }
                    
                 }
@@ -454,41 +429,34 @@ $borc: #e6e6eb;
                     height: auto;
                   
                    }
-                }
-               
-           
+                }  
             .listbox {
                 overflow:hidden;
                 width:100%;
-               height:20vh;
+                height:20vh;
              
                 .items {
                     border-radius: 2px;
-                padding: 10px 0;
-                font-size: 14px;
-                position: relative;
-               display:flex;
-                z-index:100;
-                width:100%;
-               
-                transition:transform 3s ease-in-out;
-               white-space:nowrap;
-               transition:all .2s;
-               transform:scale(0.98);
-               will-change:transform;
-               user-select:none;
-               cursor:move;
-                margin-left: 20px;
-                    
-                  
+                    padding: 10px 0;
+                    font-size: 14px;
+                    position: relative;
+                    display:flex;
+                    z-index:100;
+                    width:100%;               
+                    transition:transform 3s ease-in-out;
+                    white-space:nowrap;
+                    transition:all .2s;
+                    transform:scale(0.98);
+                    will-change:transform;
+                    user-select:none;
+                    cursor:move;
+                    margin-left: 20px; 
                     &.active{
                         cursor:grabbing;
                         transform:scale(1);
                         background:rgba(255,255,255,0.3);
-                    }
-                   
+                    }                   
                     .item {
-                      
                         background:#fff;
                         margin-right: 20px;
                         padding: 3px 5px;
@@ -501,7 +469,6 @@ $borc: #e6e6eb;
                             display: inline-block;
                             flex:2;
                             font-size: 0;
-                           
                             .thumb {
                                 width:100%; height:100%;
                                > a{
@@ -509,9 +476,8 @@ $borc: #e6e6eb;
                                 }
                                 img {
                                     width:100px; height:100px;
-                                  
-                                    border-radius: 3vw;
-                                }
+                                    border-radius: 3vw; 
+                                  }
                               }
                             }
                         .rightsec {
@@ -527,7 +493,6 @@ $borc: #e6e6eb;
                                 > h4 {
                                     font-size: 16px;
                                     text-transform:uppercase;
-                                   
                                 }
                                 #idx{
                                     text-align:center;
@@ -539,14 +504,11 @@ $borc: #e6e6eb;
                                 > span {
                                    display:none;
                                 }
-                            }
-                           
+                            }  
                            > h6 {
-                           
                                 color: #9999a0;
                                 margin-bottom: 10px;
                             }
-                            
                             .address {
                                 font-size: 13px;
                                 color: #9999a0;
@@ -567,11 +529,8 @@ $borc: #e6e6eb;
                         font-size:10px;
                         color: #9999a0;
                     }
-             }
+                }
             }
-        
         }
-    
-        
-    }
+   }
 }
