--- a/css/map.css
+++ b/css/map.css
@@ -164,8 +164,18 @@
   left: 0px;
   z-index: 100;
   width: 100%;
-  height: auto;
+  height: 100%;
   overflow: hidden;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.slider .listbox.active {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  background: rgba(255, 255, 255, 0.3);
 }
 
 .slider .listbox .items {
@@ -192,22 +202,13 @@
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  cursor: move;
   margin-left: 20px;
-}
-
-.slider .listbox .items.active {
-  cursor: -webkit-grabbing;
-  cursor: grabbing;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  background: rgba(255, 255, 255, 0.3);
 }
 
 .slider .listbox .items .item {
   border: 1px solid rgba(34, 34, 40, 0.15);
   background: #fff;
-  margin-right: 20px;
+  margin-right: 40px;
   padding: 10px;
   border: 1px solid #e6e6eb;
   width: 430px;
