--- a/css/style.css
+++ b/css/style.css
@@ -293,13 +293,26 @@
   height: auto;
 }
 
-.background .nearbox .listbox {
+.background .nearbox .slider {
   overflow: hidden;
-  width: 100%;
-  height: 20vh;
 }
 
-.background .nearbox .listbox .items {
+.background .nearbox .slider .listbox {
+  width: 100%;
+  height: 20vh;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.background .nearbox .slider .listbox.active {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.background .nearbox .slider .listbox .items {
   border-radius: 2px;
   padding: 10px 0;
   font-size: 14px;
@@ -323,19 +336,10 @@
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  cursor: move;
   margin-left: 20px;
 }
 
-.background .nearbox .listbox .items.active {
-  cursor: -webkit-grabbing;
-  cursor: grabbing;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  background: rgba(255, 255, 255, 0.3);
-}
-
-.background .nearbox .listbox .items .item {
+.background .nearbox .slider .listbox .items .item {
   background: #fff;
   margin-right: 20px;
   padding: 3px 5px;
@@ -349,11 +353,11 @@
           flex-direction: column;
 }
 
-.background .nearbox .listbox .items .item .con {
+.background .nearbox .slider .listbox .items .item .con {
   width: 330px;
 }
 
-.background .nearbox .listbox .items .item .con .leftsec {
+.background .nearbox .slider .listbox .items .item .con .leftsec {
   display: inline-block;
   -webkit-box-flex: 2;
       -ms-flex: 2;
@@ -361,23 +365,23 @@
   font-size: 0;
 }
 
-.background .nearbox .listbox .items .item .con .leftsec .thumb {
+.background .nearbox .slider .listbox .items .item .con .leftsec .thumb {
   width: 100%;
   height: 100%;
 }
 
-.background .nearbox .listbox .items .item .con .leftsec .thumb > a {
+.background .nearbox .slider .listbox .items .item .con .leftsec .thumb > a {
   width: 100%;
   height: 100%;
 }
 
-.background .nearbox .listbox .items .item .con .leftsec .thumb img {
+.background .nearbox .slider .listbox .items .item .con .leftsec .thumb img {
   width: 100px;
   height: 100px;
   border-radius: 3vw;
 }
 
-.background .nearbox .listbox .items .item .con .rightsec {
+.background .nearbox .slider .listbox .items .item .con .rightsec {
   -webkit-box-flex: 3;
       -ms-flex: 3;
           flex: 3;
@@ -390,16 +394,16 @@
   font-size: 0;
 }
 
-.background .nearbox .listbox .items .item .con .rightsec > div {
+.background .nearbox .slider .listbox .items .item .con .rightsec > div {
   margin-bottom: 6px;
 }
 
-.background .nearbox .listbox .items .item .con .rightsec > div > h4 {
+.background .nearbox .slider .listbox .items .item .con .rightsec > div > h4 {
   font-size: 16px;
   text-transform: uppercase;
 }
 
-.background .nearbox .listbox .items .item .con .rightsec > div #idx {
+.background .nearbox .slider .listbox .items .item .con .rightsec > div #idx {
   text-align: center;
   vertical-align: center;
   width: 25px;
@@ -408,16 +412,16 @@
   border: 2px solid #4aa0ec;
 }
 
-.background .nearbox .listbox .items .item .con .rightsec > div > span {
+.background .nearbox .slider .listbox .items .item .con .rightsec > div > span {
   display: none;
 }
 
-.background .nearbox .listbox .items .item .con .rightsec > h6 {
+.background .nearbox .slider .listbox .items .item .con .rightsec > h6 {
   color: #9999a0;
   margin-bottom: 10px;
 }
 
-.background .nearbox .listbox .items .item .con .rightsec .address {
+.background .nearbox .slider .listbox .items .item .con .rightsec .address {
   font-size: 13px;
   color: #9999a0;
   white-space: pre-wrap;
