--- a/css/style.scss
+++ b/css/style.scss
@@ -235,11 +235,17 @@ $borc: #e6e6eb;
                 height: auto;                      
                }
             }  
-        .listbox {
-            overflow:hidden;
+     .slider {
+        overflow:hidden;
+        .listbox {              
             width:100%;
-            height:20vh;
-         
+            height:20vh;  
+            cursor:grab;                
+            &.active{
+                cursor:grabbing;
+                transform:scale(1.05);
+                background:rgba(255,255,255,0.3);
+            }         
             .items {
                 border-radius: 2px;
                 padding: 10px 0;
@@ -254,13 +260,7 @@ $borc: #e6e6eb;
                 transform:scale(0.98);
                 will-change:transform;
                 user-select:none;
-                cursor:move;
-                margin-left: 20px; 
-                  &.active{
-                    cursor:grabbing;
-                    transform:scale(1);
-                    background:rgba(255,255,255,0.3);
-                }               
+                margin-left: 20px;                            
                 .item {
                     background:#fff;
                     margin-right: 20px;
@@ -324,20 +324,21 @@ $borc: #e6e6eb;
                 }
               }
             }
-         }   
-         .mapInfo{
-            text-align:center;
-           > p{
-               display:inline-block;
-               margin-top:2px;
-               color: #9999a0;
+         }        
+       }
+       .mapInfo{
+        text-align:center;
+       > p{
+           display:inline-block;
+           margin-top:2px;
+           color: #9999a0;
+           font-size:10px;
+           a{
                font-size:10px;
-               a{
-                   font-size:10px;
-                   color: #9999a0;
-               }
-            }
-         }              
+               color: #9999a0;
+           }
+        }     
+     }              
     }
 }
   
