--- a/css/map.css
+++ b/css/map.css
@@ -29,6 +29,10 @@
   background-size: 100% 100%;
 }
 
+.background .searchbox .back:hover {
+  background: url(../img/ic_back-on.png) no-repeat;
+}
+
 .background .searchbox .inputarea {
   position: relative;
   padding: 10px 0;
@@ -112,7 +116,15 @@
   color: #9999a0;
 }
 
+.background .nearbox .mapbox .distance .nearby .location {
+  float: right;
+  background-color: whitesmoke;
+  padding: 2px;
+  margin-top: 5px;
+}
+
 .background .nearbox .mapbox .distance .level {
+  width: 90%;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
@@ -125,6 +137,10 @@
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+
+.background .nearbox .mapbox .distance .level > a:hover {
+  background-color: aliceblue;
 }
 
 .background .nearbox .mapbox .distance .level > a p {
@@ -164,7 +180,6 @@
   left: 0px;
   z-index: 100;
   width: 100%;
-  height: 100%;
   overflow: hidden;
   cursor: -webkit-grab;
   cursor: grab;
